@@ -1,6 +1,7 @@
 Version 1.22.5  *
 ==================
 - Fixed crash on Windows when installing a GAMS license in a user home directory, which has an Unicode name.
+- Fixed an unsuccessful write to `gamsconfig.yaml`, e.g. when the permissions are not set properly.
 
 Version 1.22.4
 ==================
